# sale-app

./: .env.example  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf
backend/: .coverage  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt  schema.yaml
backend/authentication/: urls.py
backend/authentication/serializers/: __init__.py  auth_serializer.py  user_serializer.py
backend/authentication/tests/: test_auth_e2e.py  test_base_test_case.py  test_default_setup_test_data.py  test_profile_e2e.py  test_serializers_e2e.py  test_token_e2e.py  test_views_edge_cases.py
backend/authentication/views/: __init__.py  auth_views.py  user_views.py
backend/backend/: constants.py  settings.py  urls.py
backend/common/: base_test_case.py
fe/: .env.example  package-lock.json  package.json
fe/app/api/: client.ts  config.ts  types.ts
fe/app/components/: ProtectedRoute.tsx
fe/app/contexts/: AuthContext.tsx
fe/app/routes/: dashboard.tsx  home.tsx  login.tsx
fe/app/utils/: jwt.ts
frontend/: Dockerfile  package.json
